tests/should_fail/let_destructure_struct_pattern.nv
module fail
// Let destructure: struct pattern not allowed
struct Point { x: Int, y: Int }
let Point { x, y } = Point(1, 2)
